--- a/examples/index.html
+++ b/examples/index.html
@@ -181,7 +181,7 @@ $(window).on('load',
             <option value="dbtwbt" selected>Dry-bulb/wet-bulb temperature</option>
             <option value="dbtdpt">Dry-bulb/dew-point temperature</option>
             <option value="dbtrh">Dry-bulb temperature/relative humidity</option>
-            <option value="dbthr">Dry-bulb temperature/Humidity ratio</option>
+            <option value="dbtw">Dry-bulb temperature/Humidity ratio</option>
             <option value="dbth">Dry-bulb temperature/Enthalpy</option>
           </select>
         </div>
@@ -243,9 +243,16 @@ var getPsychrometricsStateInputState = function() {
       hash[PsychrometricsJS.Variables.DPT] = new PsychrometricsJS.Temperature(parseFloat($('#psyst-dewpointtemperature').val()), PsychrometricsJS.Units.CELSIUS);
       break;
     case 'dbtrh':
-    case 'dbthr':
+      hash[PsychrometricsJS.Variables.DBT] = new PsychrometricsJS.Temperature(parseFloat($('#psyst-drybulbtemperature').val()), PsychrometricsJS.Units.CELSIUS);
+      hash[PsychrometricsJS.Variables.RH] = parseFloat($('#psyst-relativehumidity').val())/100.0;
+      break;
+    case 'dbtw':
+      hash[PsychrometricsJS.Variables.DBT] = new PsychrometricsJS.Temperature(parseFloat($('#psyst-drybulbtemperature').val()), PsychrometricsJS.Units.CELSIUS);
+      hash[PsychrometricsJS.Variables.W] = parseFloat($('#psyst-humidityratio').val());
+      break;
     case 'dbth':
-      throw "Input combination " + $('#psyst-select-input').val() + ' is not implemented yet...';
+      hash[PsychrometricsJS.Variables.DBT] = new PsychrometricsJS.Temperature(parseFloat($('#psyst-drybulbtemperature').val()), PsychrometricsJS.Units.CELSIUS);
+      hash[PsychrometricsJS.Variables.H] = parseFloat($('#psyst-enthalpy').val());
       break;
     default:
       throw "Input combination " + $('#psyst-select-input').val() + ' is not supported';
@@ -255,11 +262,11 @@ var getPsychrometricsStateInputState = function() {
 
 var enablePsychrometricsState = function(option) {
   var hash = {
-      '#psyst-drybulbtemperature': ! /^(dbtwbt|dbtdpt|dbtrh|dbthr|dbth)$/.test(option),
+      '#psyst-drybulbtemperature': ! /^(dbtwbt|dbtdpt|dbtrh|dbtw|dbth)$/.test(option),
       '#psyst-wetbulbtemperature': ! /^(dbtwbt)$/.test(option),
       '#psyst-dewpointtemperature': ! /^(dbtdpt)$/.test(option),
       '#psyst-relativehumidity': ! /^(dbtrh)$/.test(option),
-      '#psyst-humidityratio': ! /^(dbthr)$/.test(option),
+      '#psyst-humidityratio': ! /^(dbtw)$/.test(option),
       '#psyst-enthalpy': ! /^(dbth)$/.test(option)
     };
   for (var k in hash) {
@@ -274,7 +281,7 @@ var updatePsychrometricsState = function() {
   if ($('#psyst-drybulbtemperature').prop('disabled')) { $('#psyst-drybulbtemperature').val(state.getDryBulbTemperature().to_celsius()); }
   if ($('#psyst-wetbulbtemperature').prop('disabled')) { $('#psyst-wetbulbtemperature').val(state.getWetBulbTemperature().to_celsius()); }
   if ($('#psyst-dewpointtemperature').prop('disabled')) { $('#psyst-dewpointtemperature').val(state.getDewPointTemperature().to_celsius()); }
-  if ($('#psyst-relativehumidity').prop('disabled')) { $('#psyst-relativehumidity').val(state.getRelativeHumidity()); }
+  if ($('#psyst-relativehumidity').prop('disabled')) { $('#psyst-relativehumidity').val(state.getRelativeHumidity()*100.0); }
   if ($('#psyst-humidityratio').prop('disabled')) { $('#psyst-humidityratio').val(state.getHumidityRatio()); }
   if ($('#psyst-enthalpy').prop('disabled')) { $('#psyst-enthalpy').val(state.getEnthalpy()); }
 };
